--- a/dash.html
+++ b/dash.html
@@ -108,6 +108,17 @@
   </div>
 
   <div id="backdrop" class="backdrop"></div>
+  <!-- Chat Support Button -->
+  <div id="chatSupportBtn" class="chat-support">💬</div>
+
+
+  <!-- Support Popup -->
+  <div id="supportPopup" class="support-popup">
+    <h4>Need Help?</h4>
+    <p>Contact our support team via email.</p>
+    <button onclick="contactSupport()">Send Support Email</button>
+  </div>
+
 
   <script src="dash.js"></script>
   
