--- a/dash.html
+++ b/dash.html
@@ -27,7 +27,7 @@
 
 
   <!-- Notification -->
-<div id="notificationBox" class="notification-box hidden">
+<div id="notificationBox" class="notification-box">
   <h3>Notifications</h3>
   <ul id="notificationList"></ul>
 </div>
