--- a/dash.html
+++ b/dash.html
@@ -99,7 +99,7 @@
 
         <div class="right-summary">
           <button class="checkout-button" onclick="handlePayment()">Pay with Crypto</button>
-          <button class="checkout-button secondary" id="faw-checkout-btn">Pay with Card</button>
+          <!--<button class="checkout-button secondary" id="faw-checkout-btn">Pay with Card</button>-->
         </div>
       </div>
 
