--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@
     </div>
   </div>
 
+    <!-- Custom Alert -->
+    <div id="customAlert" class="custom-alert hidden">
+    <div class="alert-icon">✅</div>
+    <div class="alert-text" id="alertMessage">Message goes here</div>
+    </div>
+
+
+
   <script>
     function switchForm(form) {
       document.getElementById("loginForm").classList.remove("active");
