--- a/dash.html
+++ b/dash.html
@@ -29,7 +29,7 @@
   <!-- Notification -->
 <div id="notificationBox" class="notification-box">
   <h3>Notifications</h3>
-  <ul id="notificationList"></ul>
+  <ul id="notificationList"></ul> 
 </div>
 
 
@@ -108,16 +108,24 @@
   </div>
 
   <div id="backdrop" class="backdrop"></div>
-  <!-- Chat Support Button -->
-  <div id="chatSupportBtn" class="chat-support">💬</div>
+  <div id="chatSupport" class="chat-support">
+  💬
+</div>
+
+  <div id="supportPopup" class="support-popup" role="dialog" aria-modal="true" aria-labelledby="supportTitle">
+  <h4 id="supportTitle">Need Help?</h4>
+  <p>Contact our support team via email.</p>
+  <button onclick="contactSupport()">Send Support Email</button>
+</div>
 
 
-  <!-- Support Popup -->
-  <div id="supportPopup" class="support-popup">
-    <h4>Need Help?</h4>
-    <p>Contact our support team via email.</p>
-    <button onclick="contactSupport()">Send Support Email</button>
+  <!-- Custom Alert -->
+  <div id="customAlert" class="custom-alert hidden">
+    <div class="alert-icon">✅</div>
+    <div class="alert-text" id="alertMessage">Message goes here</div>
   </div>
+
+
 
 
   <script src="dash.js"></script>
