--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
   <title>Login | Backend</title>
   <link rel="stylesheet" href="auth.css" />
   <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
+  <!-- Favicon -->
+  <link rel="icon" href="logo.ico" type="image/x-icon">
+
+  <!-- Optional PNG fallback -->
+  <link rel="icon" href="/logo.png" type="image/png">
+
+  <!-- Structured Data for Google Logo -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "url": "https://backendmarket.store",
+    "logo": "https://backendmarket.store/logo.png"
+  }
+  </script>
+
   
 </head>
 <body>
