--- a/success.html
+++ b/success.html
@@ -10,7 +10,7 @@
       </div>
       <h1>Payment Successful!</h1>
       <p>🎉 Thank you, your token is on the way to your email.</p>
-      <a href="dash.html" class="back-button">← Back to Dashboard</a>
+      <a href="dashboard.html" class="back-button">← Back to Dashboard</a>
     </div>
   </div>
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3.11.0/dist/email.min.js"></script>
