--- a/dashboard.html
+++ b/dashboard.html
@@ -48,6 +48,8 @@
         <li onclick="loadPlatform('mev')"><i class="ri-cpu-line"></i> MEV Bots</li>
         <li onclick="loadPlatform('websites')"><i class="ri-global-line"></i> Websites</li>
         <li onclick="loadPlatform('esp')"><i class="ri-eye-line"></i> ESP Cheats</li>
+        <li onclick="loadPlatform('cricket')"><i class="ri-cricket-ball-line"></i> Cricket API</li>
+
       </ul>
     </nav>
 
