--- a/dashboard.html
+++ b/dashboard.html
@@ -52,6 +52,8 @@
         <li id="licenseComplianceBtn" role="button" tabindex="0">
           <i class="ri-shield-check-line"></i> License & Anti-Cheat
         </li>
+        <li onclick="loadPlatform('sportslive')"><i class="ri-broadcast-line"></i> Sports Live Feed</li>
+
       </ul>
     </nav>
 
